finally fix wierd flexbox spacing

--- a/public/style.css
+++ b/public/style.css
@@ -641,6 +641,7 @@ li {
 .wrtn-cards {
   display: flex;
   flex-flow: row wrap;
+  justify-content: space-between;
 }
 
 @keyframes details-title-move {
